#17 docs: expand javadocs for core/core-api and add module README